2006-02-14  Atsushi Enomoto <atsushi@ximian.com>

	* XmlWriter.cs : (WriteElementString and WriteAttributeString)
	  Skip empty string output.

2006-02-14  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriter.cs : WriteRaw("") is not simply ignored but process
	  state check and closes open tag.

2006-02-11  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs :
	  Avoid extra AppendValueChar() in ReadWhitespace().

2006-02-06  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs : ReadTextReader() is now assured to have current
	  node content, except for Text, CDATA and Comment. ReadName() does
	  not use nameBuffer and reuse peekChars.

2006-02-06  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs : eliminated currentTagBuffer. XmlDeclaration is
	  now once read as PI and then re-parsed from Value. DTD internal
	  subset is now parsed as usual "value".

2006-02-06  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs : Expect() could be written inline and it could
	  provide better information. ReadEndTag() could use Expect() instead
	  of costy ReadName().

2006-02-04  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs : on ReadEndTag() we can avoid NameTable.Add().
	  Store name, local name and prefix in the stack instead of just name
	  and reuse them for EndElement.

2006-02-04  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocumentNavigator.cs : make use of HasAttributes (avoid possible
	  XmlAttributeCollection creation).

2006-02-03  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs : no need to call Clear() for each attribute value.

2006-02-03  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocument.cs : reverted most of the previous changes. It somehow
	  broke System.Data tests.

2006-01-30  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocument.cs, XmlAttribute.cs, XmlElement.cs : Avoid unnecessary
	  name checks in CreateElement() and CreateAttribute().